--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"username": "username",
-	"password": "password",
+	"username": "mou.mahi.54",
+	"password": "moufuckyou123",
 	"timezone": 0,
 	"friends": "input/friends.csv",
 	"tags": "input/tags.csv",
